--- a/serverless.yml
+++ b/serverless.yml
@@ -25,7 +25,7 @@ custom:
 
 functions:
   hello:
-    handler: handler.hello
+    handler: src/lambda/handler.hello
     iamRoleStatementsName: ${self:service}-hello-${self:custom.stage}
     iamRoleStatements:
       - Effect: Allow
@@ -55,14 +55,14 @@ resources:
         AvailabilityZone:
           Fn::Select:
             - 0
-            - Fn::GetAZs: ""
+            - Fn::GetAZs: ''
     EfsSecurityGroup:
       Type: AWS::EC2::SecurityGroup
       Properties:
         VpcId: !Ref VPC
-        GroupDescription: "mnt target sg"
+        GroupDescription: 'mnt target sg'
         SecurityGroupIngress:
-        - IpProtocol: "-1"
+        - IpProtocol: '-1'
           CidrIp: 0.0.0.0/0
     FileSystem:
       Type: AWS::EFS::FileSystem
@@ -81,14 +81,14 @@ resources:
       Properties:
         FileSystemId: !Ref FileSystem
         PosixUser:
-          Uid: "1000"
-          Gid: "1000"
+          Uid: '1000'
+          Gid: '1000'
         RootDirectory:
           CreationInfo:
-            OwnerGid: "1000"
-            OwnerUid: "1000"
-            Permissions: "0777"
-          Path: /
+            OwnerGid: '1000'
+            OwnerUid: '1000'
+            Permissions: '0777'
+          Path: /mnt/efs
   extensions:
     HelloLambdaFunction:
         DependsOn:
@@ -101,5 +101,5 @@ resources:
               - Arn: !GetAtt EFSAccessPoint.Arn
                 LocalMountPath: '${self:custom.LocalMountPath}'
           VpcConfig:
-            SecurityGroupIds: [ {"Ref":"EfsSecurityGroup"} ]
-            SubnetIds:  [ {"Ref":"Subnet1"} ]
+            SecurityGroupIds: [ {'Ref':'EfsSecurityGroup'} ]
+            SubnetIds:  [ {'Ref':'Subnet1'} ]
